cmake_minimum_required(VERSION 3.20)
project(ABC)

set(CMAKE_CXX_STANDARD 14)

add_executable(250C.cpp 250c.cpp)
add_executable(250B.cpp 250b.cpp)
add_executable(250A.cpp 250a.cpp)

add_executable(249C.cpp 249c.cpp)
add_executable(249B.cpp 249b.cpp)
add_executable(249A.cpp 249a.cpp)

add_executable(226C.cpp 226C.cpp)
add_executable(226B.cpp 226B.cpp)
add_executable(226A.cpp 226A.cpp)

add_executable(247C.cpp 247c.cpp)
add_executable(247B.cpp 247b.cpp)
add_executable(247A.cpp 247a.cpp)

add_executable(248D.cpp 248D.cpp)
add_executable(248C.cpp 248C.cpp)
add_executable(248B.cpp 248B.cpp)
add_executable(248A.cpp 248A.cpp)

add_executable(244D.cpp 244D.cpp)
add_executable(244C.cpp 244C.cpp)
add_executable(244B.cpp 244B.cpp)
add_executable(244A.cpp 244A.cpp)

add_executable(243A.cpp 243A.cpp)
add_executable(243B.cpp 243B.cpp)
add_executable(243C.cpp 243C.cpp)

add_executable(241A.cpp 241A.cpp)
add_executable(241B.cpp 241B.cpp)
add_executable(241C.cpp 241C.cpp)

add_executable(236B.cpp 236B.cpp)
add_executable(236A.cpp 236A.cpp)

add_executable(223B.cpp 223B.cpp)
add_executable(223A.cpp 223A.cpp)

add_executable(177C.cpp 177C.cpp)

add_executable(129D.cpp 129D.cpp)

add_executable(084D.cpp 084D.cpp)

add_executable(00test.cpp 00test.cpp)