cmake_minimum_required(VERSION 3.20)
project(Typical90)

set(CMAKE_CXX_STANDARD 14)

add_executable(55.cpp 55.cpp)
add_executable(33.cpp 33.cpp)
add_executable(27.cpp 27.cpp)
add_executable(24.cpp 24.cpp)
add_executable(22.cpp 22.cpp)
add_executable(10.cpp 10.cpp)
add_executable(04.cpp 04.cpp)
add_executable(00.cpp 00.cpp)